ingress-demo/manifests/mirror-request/my-app-mirror.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-mirror
  labels:
    app: my-app-mirror
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-mirror
  template:
    metadata:
      labels:
        app: my-app-mirror
    spec:
      containers:
        - name: my-app-mirror
          image: ealen/echo-server:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-mirror
  labels:
    app: my-app-mirror
spec:
  selector:
    app: my-app-mirror
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
